--- a/182.md
+++ b/182.md
@@ -20,7 +20,7 @@ So when he started building the team at his company, he decided to do things dif
 
 ---
 
-Transcript for [episode 162](https://testandcode.com/182)
+Transcript for [episode 182](https://testandcode.com/182)
 of the [Test & Code Podcast](https://testandcode.com/)
 
 <em>This transcript starts as an auto generated transcript.</em><br/>
@@ -33,7 +33,7 @@ pythontest.com/testandcode
 
 00:00:00 Don't you just love technical interviews with someone who just saw your resume, like five minutes ago asking you to write some code on a whiteboard? Probably code that has nothing to do with anything you've done before or anything you will do at the company? No. Well, neither does Nathan Ashmarker. So when he started to build the team at his company, he decided to do things differently.
 
-00:00:24 Support for testing code comes from SAS Labs, the end to end solution provider that helps development teams build digital applications so they work exactly as they should on every browser, OS and device. Every single time. They offer full stack and full software development lifecycle testing, including low code, mobile app, mobile beta, API, error reportering and monitoring, cross browser, UI and visual and automation. Learn more@saucelabs.com SauceLabs test continuously test smarter, develop with confidence.
+00:00:24 Support for testing code comes from Sauce Labs, the end to end solution provider that helps development teams build digital applications so they work exactly as they should on every browser, OS and device. Every single time. They offer full stack and full software development lifecycle testing, including low code, mobile app, mobile beta, API, error reportering and monitoring, cross browser, UI and visual and automation. Learn more at saucelabs.com SauceLabs test continuously test smarter, develop with confidence.
 
 00:01:10 Welcome to Test and Code.
 
@@ -445,4 +445,4 @@ pythontest.com/testandcode
 
 00:47:04 Yeah. We need to schedule something else for some system testing and system evaluation stuff. Cool. Awesome. Thank you, sir.
 
-00:47:17 Thank you, Nathan for your thoughts on tech hiring. Thank you SauceLabs for sponsoring SauceLabs. Test continuously test smarter develop with confidence. Learn more@saucelabs.com. Thank you, Patreon supporters. Join them@testingcode.com. Support those links are in the show notes@testingcode.com 182 that's all for now. Go out and test something.
+00:47:17 Thank you, Nathan for your thoughts on tech hiring. Thank you SauceLabs for sponsoring SauceLabs. Test continuously test smarter develop with confidence. Learn more at saucelabs.com. Thank you, Patreon supporters. Join them at testingcode.com. Support those links are in the show notes at testingcode.com 182 that's all for now. Go out and test something.
