--- a/184.md
+++ b/184.md
@@ -209,7 +209,7 @@ pythontest.com/testandcode
 
 00:24:19 [Brian] But the curse of old blog posts being popular ten years ago.
 
-00:24:25 [Glyph] But we have kept pace with modern Python. It has support for type. Ins. Deferred is a generic that tells you what its result type is. If you're using my pie, it has support for Async def Con routines. There's probably a half a dozen other things that I've forgotten that we've got support for.
+00:24:25 [Glyph] But we have kept pace with modern Python. It has support for type. Ins. Deferred is a generic that tells you what its result type is. If you're using mypy, it has support for Async def Con routines. There's probably a half a dozen other things that I've forgotten that we've got support for.
 
 00:24:44 [Glyph] But yeah, Twisted is definitely a modern Python project. It's got a lot of legacy and history. But coding with Twisted is not like writing Python two code. It is like writing very modern up to the minute Python 310 code, if your project supports that.
 
