--- a/175.md
+++ b/175.md
@@ -1,6 +1,31 @@
+---
+title: 175 - Who Should Do QA?
+date: Wed, 12 Jan 2022 00:00:00 -0800
+url: /testandcode/175-who-should-do-qa
+---
+
+Who should do QA? How does that change with different projects and teams? What does "doing QA" mean, anyway?
+Answering these questions are the goals of this episode.
+
+<iframe src="https://fireside.fm/player/v2/DOAjrBV2+PNdPc88S" width="740" height="200" frameborder="0" scrolling="no">
+</iframe>
+
+---
+Transcript for [episode 175](https://testandcode.com/175)
+of the [Test & Code Podcast](https://testandcode.com/)
+
+<em>This transcript starts as an auto generated transcript.</em><br/>
+<em>[PRs welcome](https://github.com/okken/testandcode_transcripts) if you want to help fix any errors.</em><br/>
+
+<!-- 
+For people reading this on GitHub, the final page will be displayed at https://pythontest.com/testandcode
+-->
+
+---
+
 00:00:01 Who should do QA? How does that change with different projects and teams? And what is doing QA mean, really anyway? Answering these questions are the goals of this episode.
 
-00:00:12 Thank you, Pie Charm for sponsoring this episode. Each arm saves me time. Error highlighting lets me know as soon as I type a mistake. Code completion and parameter hint pop ups save me from having to look stuff up. The Get integration makes all of my Git workflows super easy, and then you get a whole bunch of bonus features like the database front end that is super cool and a super fast debugger. I wonder how PyCharm will save you time? Find out yourself at testandcode.com. Pycharm this episode is sponsored by Rollbar. Rollbar is a leading platform that enables developers to proactively, discover and resolve issues in their code, allowing them to work on continuous code improvement throughout the software development lifecycle. Rollbarn has plans for all situations, from free to large enterprise. With Rollbar, developers deploy better software faster and can quickly recover from critical errors as they happen. Learn more at rollbar.com and if you use the link in the show notes, there's a raffle you can enter. That's. Cool. Thanks Rollbar.
+00:00:12 Thank you, Pie Charm for sponsoring this episode. Each arm saves me time. Error highlighting lets me know as soon as I type a mistake. Code completion and parameter hint pop ups save me from having to look stuff up. The Get integration makes all of my Git workflows super easy, and then you get a whole bunch of bonus features like the database front end that is super cool and a super fast debugger. I wonder how PyCharm will save you time? Find out yourself at testandcode.com. Pycharm this episode is sponsored by Rollbar. Rollbar is a leading platform that enables developers to proactively, discover and resolve issues in their code, allowing them to work on continuous code improvement throughout the software development lifecycle. Robar has plans for all situations, from free to large enterprise. With Rollbar, developers deploy better software faster and can quickly recover from critical errors as they happen. Learn more at rollbar.com and if you use the link in the show notes, there's a raffle you can enter. That's. Cool. Thanks Rollbar.
 
 00:01:28 Welcome to Test and Code.
 
@@ -34,4 +59,4 @@
 
 00:11:38 I take this to mean that software developers are writing tests, even if the test engineers are writing the bulk of the system level tests, and that the end result suite. Test suite is owned by the entire team. If something is missed, the team missed. It, not the test engineer. If a test is broken, it's the team's responsibility to fix it, just like the software. We don't finger point. We fix problems, right? I know there are tons of kinds of software and tons of kinds of team structure, and I've only been exposed to a handful. If you have some perspectives on this topic that differ from mine, or even if they're the same, please let me know. Maybe we could do another episode on some other ways to split the problem.
 
-00:12:27 Thank you, PyCharm for sponsoring visit test and code.com PyCharm for a four month free trial of PyCharm pro save time, use PyCharm thank you Rollbar for sponsoring Rollbar enables developers to proactively, discover and resolve issues in their code so they can work on continuous code improvement throughout the software lifecycle. Learn more at rollbar.com thank you Patreon supporters join them at testandcode.com support all of those links are in the show notes at testandcode.com. That's all for now. I'll go ahead and test something.
+00:12:27 Thank you, PyCharm for sponsoring visit test and code.com PyCharm for a four month free trial of PyCharm pro save time, use PyCharm thank you Robar for sponsoring Robar enables developers to proactively, discover and resolve issues in their code so they can work on continuous code improvement throughout the software lifecycle. Learn more at rollbar.com thank you Patreon supporters join them at testandcode.com support all of those links are in the show notes@testandcode.com. That's all for now. I'll go ahead and test something.
