pre-transcribed episodes and 100+

--- a/139.md
+++ b/139.md
@@ -1,5 +1,5 @@
 ---
-title: 139 - Test Automation: Shifting Testing Throughout the Software Lifecycle - Nalin Parbhu
+title: 139 - Test Automation - Shifting Testing Throughout the Software Lifecycle - Nalin Parbhu
 date: Fri, 04 Dec 2020 12:30:00 -0800
 url: /testandcode/139-test-automation-shifting-testing-software-lifecycle
 ---
