--- a/153.md
+++ b/153.md
@@ -1,5 +1,5 @@
 ---
-title: 153 - Playwright for Python: end to end testing of web apps - Ryan Howard
+title: 153 - Playwright for Python - end to end testing of web apps - Ryan Howard
 date: Thu, 13 May 2021 22:15:00 -0700
 url: /testandcode/153-playwright-python-testing-web-apps
 ---
