--- a/156.md
+++ b/156.md
@@ -1,5 +1,5 @@
 ---
-title: 156 - Flake8: Python linting framework with Pyflakes, pycodestyle, McCabe, and more - Anthony Sottile
+title: 156 - Flake8 - Python linting framework with Pyflakes, pycodestyle, McCabe, and more - Anthony Sottile
 date: Thu, 03 Jun 2021 15:45:00 -0700
 url: /testandcode/156-flake8-python-linting-pyflakes-pycodestyle-mccabe
 ---
